# ENVISIoN

./: .dockerignore  .gitignore  Dockerfile  FERMI_README.txt  LICENSE  README.md  README.rst  package-lock.json  package.json  setup.sh  test_bandstructures.py
ENVISIoN/: ENVISIoN.py  __init__.py
ElectronUI/: GUI.py  GUIconfig.yml  config.json  envisionMainTest.py  index.html  main.js  nodeInterface.py
GUI/: ENVISIoN.py  ParserPane.py  VisFrame.py  frameCharge.py
HDF5/: demo_PKF.hdf5
InviwoWorkspace/: MD Workspace.inv
data/: EIGENVAL  OUTCAR  PCDAT.txt
demo/: PCF.py  bandstructure.py  bandstructure3D.py  charge_slice.py  dos.py  elf.py  fermi_demo.py  fermi_surface.py  fermi_volume.py  force.py  lineplot.py  molecular_dynamics.py  parchg.py  test.py
envision/: EnvisionMain.py  README.rst  __init__.py  setup.py
envisionGUI/: GUI.py
envisionpy/: EnvisionMain.py  __init__.py
examples/: example.py  hdf5-read-example.py
inviwo/: install.sh
inviwo/app/: CMakeLists.txt  envisionminimum.cpp
node/: ENVISIoN_backend.py  JSON-api-ref.txt  about.html  eventCallbacks.js  index.html  loadPanel.html  main.js  package.json  parserPanel.html  py_js_networking.py  pytest.py  pythonInterface.js  script.py  utils.js
packaging/: control  deb-repack.sh  envision  envision-inviwo
scripts/: PCF.py  PKF.py  PKFVisualisering.py  bandstructure-test.py  bandstructure.py  bandstructure3Dscript.py  charge.py  charge_script.py  dos.py  efl.py  elf.py  fermi.py  install.sh  install_envision_ubuntu_1804.sh  parchg.py  tst.py  unitcell+charge.py  unitcell+dos.py  unitcell.py  (+6 more)
(+577 files in other folders)
